<resources>
    <string name="app_name">Transaction Terminal</string>
    <string name="action_search">Search</string>
    <string name="action_load_last_transaction">Load Last Transaction</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Home Fragment</string>
    <string name="save">Save</string>

    <!-- First fragment -->
    <string name="hello_first_fragment">Welcome to use</string>
    <string name="make_payment">Make payment</string>
    <string name="search_transaction">Search transaction history</string>

    <!-- Card entry fragment -->
    <string name="card_entry_fragment_label">Add Credit Card or Debit Card</string>
    <string name="action_continue">Continue</string>
    <string name="hint_card_number">Card Number</string>
    <string name="hint_expiry">MM/YY</string>
    <string name="hint_cvv">CVV</string>
    <string name="hint_moto_type">MOTO type</string>
    <string name="hint_no_cvv_reason">No CVV Reason</string>
    <string name="hint_card_stored">Card Stored?</string>
    <string name="helper_text_master_card">Master Card</string>
    <string name="helper_text_visa_card">Visa Card</string>
    <string name="warning_required_field">Required field</string>
    <string name="warning_invalid_month_year">Invalid month/year</string>
    <string name="warning_card_expired">Card has expired</string>
    <string name="warning_moto_type_missing">Please choose a type</string>
    <string name="warning_no_cvv_reason_missing">Please specify the reason of CVV missing</string>
    <string name="warning_invalid_card_number">Invalid or unsupported form of payment</string>
    <string name="toast_transaction_saved">Transaction is saved.</string>

    <string-array name="moto_type_values">
        <item>Single</item>
        <item>Recurring</item>
    </string-array>
    <string-array name="no_cvv_reason_values">
        <item>No CVV on card</item>
        <item>No card present</item>
        <item>Unable to read</item>
    </string-array>

    <!-- Transaction search fragment -->
    <string name="search_transaction_fragment_label">Search History Transaction</string>
    <string name="hint_card_number_last_4">Last 4 Digits of Card Number</string>
    <string name="hint_transaction_date">Transaction Date</string>
    <string name="no_matched_transactions">No matched transactions found.</string>

</resources>
