<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.cheng.transactionterminal.ui.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_to_card_entry_fragment"
            app:destination="@id/CardEntryFragment" />
        <action
            android:id="@+id/action_to_search_transaction_fragment"
            app:destination="@id/SearchTransactionFragment" />
    </fragment>
    <fragment
        android:id="@+id/CardEntryFragment"
        android:name="com.cheng.transactionterminal.ui.CardEntryFragment"
        android:label="@string/card_entry_fragment_label"
        tools:layout="@layout/fragment_card_entry">
    </fragment>
    <fragment
        android:id="@+id/SearchTransactionFragment"
        android:name="com.cheng.transactionterminal.ui.SearchTransactionFragment"
        android:label="@string/search_transaction_fragment_label"
        tools:layout="@layout/fragment_search_transaction">
    </fragment>
</navigation>
