<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_standard"
    tools:context=".ui.CardEntryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <!-- TODO: hardcoded text-->
        <TextView
            android:id="@+id/text_view_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_standard"
            android:text="$100.00"
            android:textSize="30sp"
            android:textStyle="bold"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_card_number"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="16"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_standard"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_expiry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_expiry"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_expiry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="5"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <View
                android:layout_width="@dimen/margin_standard"
                android:layout_height="1dp"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_cvv"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_cvv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="4"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_standard"
            android:hint="@string/hint_moto_type"
            >
            <AutoCompleteTextView
                android:id="@+id/auto_complete_text_view_moto_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_card_stored"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_standard"
            android:text="@string/hint_card_stored"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_continue_transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
